# name: test_create[mongo]
  <class 'dict'> {
    '_id': 'test_analysis',
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        '_id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        '_id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create[obj]
  <class 'dict'> {
    'files': <class 'list'> [
    ],
    'id': 'test_analysis',
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'archived': False,
      'id': 'fb085f7f',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'nuvs',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        'id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create_analysis_id[mongo]
  <class 'dict'> {
    '_id': 'fb085f7f',
    'files': <class 'list'> [
    ],
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': 'genome',
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'space': <class 'dict'> {
      'id': 0,
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        '_id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        '_id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
# name: test_create_analysis_id[obj]
  <class 'dict'> {
    'files': <class 'list'> [
    ],
    'id': 'fb085f7f',
    'index': <class 'dict'> {
      'id': 'test_index',
      'version': 11,
    },
    'job': <class 'dict'> {
      'archived': False,
      'id': '7cf872dc',
      'progress': 0,
      'stage': None,
      'state': <JobState.WAITING: 'waiting'>,
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': 'bf1b993c',
      },
      'workflow': 'nuvs',
    },
    'ready': False,
    'reference': <class 'dict'> {
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 'test_ref',
      'name': 'Test Reference',
    },
    'results': None,
    'sample': <class 'dict'> {
      'id': 'test_sample',
    },
    'subtractions': <class 'list'> [
      <class 'dict'> {
        'id': 'subtraction_1',
        'name': 'Subtraction 1',
      },
      <class 'dict'> {
        'id': 'subtraction_2',
        'name': 'Subtraction 2',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'nuvs',
  }
---
